@@ -14,6 +14,7 @@ LEGEND
   [+] Added option to set host certificate check mode
   [+] Added ability to store additional trusted CA certificates in resources/cacertificates
   [*] Increased speed of access to local message history
+  [*] Added workarounds for facebook XMPP server
   [-] The application may fail in some cases after unsuccessful Stanza-session initialization
   [-] In private chats history of communication are loaded even if the relevant setting has been disabled
   [-] When changing the nickname in the conference the nickname was not changed in the active conferences menu in the roster window
